@@ -3,19 +3,14 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>io.takari</groupId>
-        <artifactId>takari</artifactId>
-        <version>27</version>
-    </parent>
-
     <groupId>com.walmartlabs.concord</groupId>
     <artifactId>parent</artifactId>
-    <version>1.94.1-SNAPSHOT</version>
+    <version>2.12.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Concord: Orchestrate More. Live Better.</description>
+    <url>https://concord.walmartlabs.com/</url>
 
     <licenses>
         <license>
@@ -46,6 +41,7 @@
         <module>forms</module>
         <module>server</module>
         <module>client</module>
+        <module>client2</module>
         <module>runtime/common</module>
         <module>runtime/v1</module>
         <module>runtime/v2</module>
@@ -58,29 +54,33 @@
         <module>console2</module>
         <module>docker-images</module>
         <module>it</module>
-        <module>k8s/agent-operator</module>
+        <module>agent-operator</module>
         <module>cli</module>
         <module>targetplatform</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
+        <maven.compiler.target>${maven.compiler.release}</maven.compiler.target>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <scm.connection>scm:git:https://github.com/walmartlabs/concord.git</scm.connection>
 
-        <jdk.version>1.8.0</jdk.version>
-
         <docker.plugin.version>0.38.1</docker.plugin.version>
         <jooq.version>3.13.4</jooq.version>
         <junit.version>5.8.2</junit.version>
-        <liquibase.version>3.5.1</liquibase.version> <!-- the newer versions (up to 3.5.3) have incorrect mappings for PG's blob/bytea -->
-        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
-        <node.version>16.13.1</node.version>
+        <liquibase.version>3.5.1
+        </liquibase.version> <!-- the newer versions (up to 3.5.3) have incorrect mappings for PG's blob/bytea -->
+        <node.version>20.12.2</node.version>
         <frontend.plugin.version>1.12.0</frontend.plugin.version>
+
+        <jdk.version>17</jdk.version>
+        <failsafe.args>
+            --add-opens java.base/java.util=ALL-UNNAMED
+        </failsafe.args>
     </properties>
 
     <dependencyManagement>
@@ -104,6 +104,11 @@
             </extension>
         </extensions>
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
@@ -138,10 +143,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.2.1</version>
                 <configuration>
                     <configLocation>checkstyle.xml</configLocation>
-                    <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
@@ -180,6 +184,18 @@
                     </rules>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
         </plugins>
 
         <pluginManagement>
@@ -203,16 +219,6 @@
                     <version>${jooq.version}</version>
                 </plugin>
                 <plugin>
-                    <groupId>io.takari.maven.plugins</groupId>
-                    <artifactId>takari-lifecycle-plugin</artifactId>
-                    <version>1.13.7</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <source>${maven.compiler.source}</source>
-                        <target>${maven.compiler.target}</target>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5.3</version>
@@ -221,6 +227,10 @@
                         <tagNameFormat>@{project.version}</tagNameFormat>
                         <localCheckout>true</localCheckout>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
+                        <pushChanges>false</pushChanges>
+                        <useReleaseProfile>false</useReleaseProfile>
+                        <goals>deploy</goals>
+                        <arguments>--batch-mode -DskipTests -Pconcord-release</arguments>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -246,6 +256,7 @@
                             <include>**/*ITCase.java</include>
                             <include>**/Test*.java</include>
                         </includes>
+                        <argLine>${failsafe.args}</argLine>
                     </configuration>
                     <executions>
                         <execution>
@@ -270,6 +281,39 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>3.3.0</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <skipSource>true</skipSource>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <executions>
+                        <execution>
+                            <id>sign-artifacts</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>3.0.0</version>
                 </plugin>
@@ -289,21 +333,9 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <groupId>com.github.kongchen</groupId>
+                    <groupId>io.swagger.core.v3</groupId>
                     <artifactId>swagger-maven-plugin</artifactId>
-                    <version>3.1.7</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.commons</groupId>
-                            <artifactId>commons-lang3</artifactId>
-                            <version>3.12.0</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.reflections</groupId>
-                            <artifactId>reflections</artifactId>
-                            <version>0.9.11</version>
-                        </dependency>
-                    </dependencies>
+                    <version>2.2.16</version>
                 </plugin>
                 <plugin>
                     <groupId>org.eclipse.sisu</groupId>
@@ -349,9 +381,9 @@
                     <version>3.0.2</version>
                 </plugin>
                 <plugin>
-                    <groupId>io.swagger</groupId>
-                    <artifactId>swagger-codegen-maven-plugin</artifactId>
-                    <version>2.3.1</version>
+                    <groupId>org.openapitools</groupId>
+                    <artifactId>openapi-generator-maven-plugin</artifactId>
+                    <version>7.0.1</version>
                 </plugin>
                 <plugin>
                     <groupId>pl.project13.maven</groupId>
@@ -361,12 +393,12 @@
                 <plugin>
                     <groupId>org.revapi</groupId>
                     <artifactId>revapi-maven-plugin</artifactId>
-                    <version>0.14.6</version>
+                    <version>0.15.0</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.revapi</groupId>
                             <artifactId>revapi-java</artifactId>
-                            <version>0.26.1</version>
+                            <version>0.28.1</version>
                         </dependency>
                     </dependencies>
                     <executions>
@@ -380,37 +412,83 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>${maven.dependency.plugin.version}</version>
+                    <version>3.1.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>3.2.0</version>
-                    <executions>
-                        <execution>
-                            <id>attach-javadocs</id>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <quiet>true</quiet>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
 
     <scm>
+        <url>${scm.connection}</url>
         <developerConnection>${scm.connection}</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
+    <distributionManagement>
+        <repository>
+            <id>sonatype.releases</id>
+            <name>Sonatype Releases</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>sonatype.snapshots</id>
+            <name>Sonatype Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <profiles>
         <profile>
+            <id>concord-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <quiet>true</quiet>
+                            <doclint>none</doclint>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <skipSource>false</skipSource>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>looper</id>
-
             <build>
                 <plugins>
                     <plugin>
@@ -430,7 +508,6 @@
         </profile>
         <profile>
             <id>walmart</id>
-
             <repositories>
                 <repository>
                     <releases>
@@ -443,7 +520,6 @@
                     <url>${public.nexusUrl}/content/groups/devtools-public</url>
                 </repository>
             </repositories>
-
             <pluginRepositories>
                 <pluginRepository>
                     <releases>
@@ -456,7 +532,6 @@
                     <url>${public.nexusUrl}/content/groups/devtools-public</url>
                 </pluginRepository>
             </pluginRepositories>
-
             <distributionManagement>
                 <repository>
                     <id>${public-release.serverId}</id>
@@ -481,29 +556,15 @@
                     <id>${public-release.serverId}</id>
                     <url>${public-release.url}</url>
                 </repository>
-
                 <snapshotRepository>
                     <id>${public-snapshot.serverId}</id>
                     <url>${public-snapshot.url}</url>
                 </snapshotRepository>
-
                 <site>
                     <id>${site.id}</id>
                     <url>${site.url}</url>
                 </site>
             </distributionManagement>
-        </profile>
-        <profile>
-            <id>jdk11</id>
-            <properties>
-                <jdk.version>11.0</jdk.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk16</id>
-            <properties>
-                <jdk.version>16</jdk.version>
-            </properties>
         </profile>
     </profiles>
 </project>
